# rapsberry

./: CMakeLists.txt  README.md  build.sh  install.sh  rpi-toolchain.cmake
src/: main.cpp
src/lib/sht35/: CMakeLists.txt  raspberrypi4b_driver_sht35_interface.c
